--- a/index.html
+++ b/index.html
@@ -268,7 +268,12 @@
       let currentPoints = localStorage.getItem('userPoints') ? parseInt(localStorage.getItem('userPoints')) : 0;
       currentPoints += points;
       localStorage.setItem('userPoints', currentPoints);
+      
+      // تحديث النقاط في السكريبت الرئيسي
+      // يمكن إضافة استدعاء دالة من السكريبت الرئيسي هنا إذا كان موجودًا
+      // مثال:
+      // mainScript.updateUserPoints(currentPoints);
     }
   </script>
 </body>
-</html>
+</html
